got da pawns on da cube
need to modify blender files for all other piece meshes before moving forward. but ready to implement logic :p

--- a/jubilant-sniffle/src/rendering/renderingConfig.json
+++ b/jubilant-sniffle/src/rendering/renderingConfig.json
@@ -34,7 +34,8 @@
     "stickerDepth": 2
   },
   "piece": {
-    "pieceMeshDirectory": ".../public/models/pieces/"
+    "pieceMeshDirectory": "../public/models/pieces/",
+    "pieceSize": 0.5
   },
   "animation": {
     "rotationSpeedZ": 0.005
