--- a/jubilant-sniffle/src/rendering/renderingConfig.json
+++ b/jubilant-sniffle/src/rendering/renderingConfig.json
@@ -21,13 +21,13 @@
     "cornerRadiusRatio": 0.2,
     "roundedSegments": 4,
     "positionOffset": 0.5,
-    "newFaceColors": {
-        "1": "#5bc0eb",
-        "2": "#fde74c",
-        "3": "#9bc53d",
-        "4": "#ba2d0b",
-        "5": "#fa7921",
-        "6": "#ffffff"
+    "stickerColors": {
+        "blue": "#5bc0eb",
+        "yellow": "#fde74c",
+        "green": "#9bc53d",
+        "red": "#ba2d0b",
+        "orange": "#fa7921",
+        "white": "#ffffff"
     },
     "stickerSize": 0.73,
     "stickerOffset": 0.1,
@@ -35,7 +35,11 @@
   },
   "piece": {
     "pieceMeshDirectory": "../public/models/pieces/",
-    "pieceSize": 0.5
+    "pieceSize": 0.6,
+    "colors": {
+        "white": "#ffffff",
+        "black": "#000000"
+    }
   },
   "animation": {
     "rotationSpeedZ": 0.005
