in the middle of making controller
the highlighted material should definitely be moved to rendering later

--- a/jubilant-sniffle/src/view/renderingConfig.json
+++ b/jubilant-sniffle/src/view/renderingConfig.json
@@ -4,7 +4,11 @@
     "near": 0.1,
     "far": 1000,
     "position": { "x": 150, "y": 150, "z": 150 },
-    "lookAt": { "x": 0, "y": 0, "z": 0 }
+    "lookAt": { "x": 0, "y": 0, "z": 0 },
+    "boardView": {
+      "position": { "x": 0.20766562241254238, "y": 101.3619134928324, "z": 68.46397539073664 },
+      "lookAt": { "x": -0.0009160852732519315, "y": -0.7334532458802423, "z": -0.6797392859733128}
+    }
   },
   "lighting": {
     "ambient": { "color": 16777215, "intensity": 0.5 },
